# fortune

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  fortune.opam  package.json
lib/: action.ml  card.ml  color.ml  deck.ml  deck.mli  dune  game.ml  money.ml  player.ml  property.ml
lib/js/: dune
lib/native/: action.ml  card.ml  color.ml  deck.ml  deck.mli  dual.ml  game.ml  game.mli  money.ml  player.ml  property.ml  property.mli  rent.ml
test/: dune  test.ml  test_fortune.ml
tui/: command.ml  dune  tui.ml  ui.ml
web/: action.ml  card.ml  color.ml  dune  main.ml  money.ml  player.ml  property.ml  show.ml
